// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new PolicyStatementDirector().constructPolicyStatement() with CodedeployPolicyStatementBuilder creates CodeDeploy full access policy 1`] = `
{
  "Action": "codedeploy:*",
  "Effect": "Allow",
  "Resource": "*",
}
`;

exports[`new PolicyStatementDirector().constructPolicyStatement() with ElasticBPolicyStatementBuilder creates statistics policy for EB instances 1`] = `
{
  "Action": "elasticbeanstalk:PutInstanceStatistics",
  "Effect": "Allow",
  "Resource": "*",
}
`;

exports[`new PolicyStatementDirector().constructPolicyStatement() with LogsPolicyStatementBuilder creates logs policy for EB instances 1`] = `
{
  "Action": [
    "logs:CreateLogStream",
    "logs:PutLogEvents",
  ],
  "Effect": "Allow",
  "Resource": "*",
}
`;

exports[`new PolicyStatementDirector().constructPolicyStatement() with S3PolicyStatementBuilder creates S3 read/write policy 1`] = `
{
  "Action": [
    "s3:ListBucket",
    "s3:ListBucketVersions",
    "s3:GetObject",
    "s3:GetObjectVersion",
    "s3:PutObject",
  ],
  "Effect": "Allow",
  "Resource": "*",
}
`;
